Issue #2403649 by hass: Fixed alignment for menu items displayed RTL

--- a/css/navbar.module-rtl.css
+++ b/css/navbar.module-rtl.css
@@ -4,6 +4,9 @@
  * RTL styling for navbar.base.css
  */
 
+#navbar-administration ul.navbar-menu {
+  text-align: right;
+}
 /* Override core system.menus.css */
 #navbar-administration ul.navbar-menu li {
   margin-right: 0;
